# rust_worlds_simplest_kata

./: Cargo.toml  HINTS.md  README.md  SOLUTION.md
.github/workflows/: CI.yaml  ci.yaml
src/: lib.rs  main.rs
