[package]
name = "worlds_simplest_kata"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "worlds_simplest_kata"
path = "src/lib.rs"

[[bin]]
name = "worlds_simplest_kata"
path = "src/main.rs"
